# m32f401ccu6_basic

./: .mxproject  CMakeLists.txt  README.md  STM32F401CCU6_W5500.ioc  flash.jlink  flash.jlink.bak
Core/Src/: gpio.c  main.c
cmake/stm32cubemx/: CMakeLists.txt
